chore: Update dependencies, add JWT library and add ogin api
